hosting prep: fix links not wrapped in <Link> set homepage: '.' in package.json

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
-body, .navbar {
+body,
+.navbar {
   color: white;
   background-color: black !important;
   font-family: "Noto Sans", "Noto Sans CJK {SC, TC}", sans-serif;
@@ -19,8 +20,10 @@ body, .navbar {
 }
 
 #footer {
-  margin-top: 20px;
+  border-top: 1px solid;
+  margin-top: 35px;
   margin-bottom: 20px;
+  padding-top: 10px;
 }
 
 .monospace {
@@ -38,12 +41,13 @@ body, .navbar {
   font-size: 20px;
 }
 
-.panel, .panel-heading {
+.panel,
+.panel-heading {
   background-color: transparent;
 }
 
 .panel-default > .panel-heading {
-  background-color: #5B6A72;
+  background-color: #5b6a72;
   color: white;
 }
 
@@ -115,31 +119,31 @@ body, .navbar {
 
 /* from mobile design elements screen */
 .stellar-mb-blue1 {
-  color: #08B5E5;
+  color: #08b5e5;
 }
 .stellar-mb-blue2 {
-  color: #07A2CC;
+  color: #07a2cc;
 }
 .stellar-mb-blue3 {
-  color: #057B9B;
+  color: #057b9b;
 }
 .stellar-mb-yellow {
-  color: #FFD148;
+  color: #ffd148;
 }
 .stellar-mb-red {
-  color: #EF7E48;
+  color: #ef7e48;
 }
 .stellar-mb-grey1 {
-  color: #5B6A72;
+  color: #5b6a72;
 }
 .stellar-mb-grey2 {
-  color: #9B9B9B;
+  color: #9b9b9b;
 }
 .stellar-mb-grey3 {
-  color: #D0D0D0;
+  color: #d0d0d0;
 }
 .stellar-mb-grey4 {
-  color: #F4F6F5;
+  color: #f4f6f5;
 }
 .stellar-mb-grey5 {
   color: #979797;
